--- a/mainrun/train_config.yaml
+++ b/mainrun/train_config.yaml
@@ -12,16 +12,16 @@ storage:
 tune_configs:
   direction: minimize
   load_if_exists: true
-  study_name: "hptune"
+  study_name: "noptune"
 
 hyperparameters:
   lr:           # log-uniform search
     type: loguniform
-    range: [1e-5, 5e-4]
+    range: [1e-4, 5e-4]
 
   dropout:      # uniform float search
     type: uniform
-    range: [0.05, 0.3]
+    range: [0.1, 0.3]
 
   block_size: # categorical choices
     type: categorical
