--- a/mainrun/train_config.yaml
+++ b/mainrun/train_config.yaml
@@ -2,7 +2,7 @@ run_configs:
   tune: false
   train: true
   use_default: false
-  train_tok: true
+  train_tok: false
 
 storage:
   url:  "hyperparameter.db"
@@ -13,17 +13,17 @@ storage:
 tune_configs:
   direction: minimize
   load_if_exists: true
-  study_name: "noptune"
+  study_name: "midtune2"
 
 hyperparameters:
   lr:           # log-uniform search
     type: loguniform
-    range: [1e-4, 5e-4]
+    range: [1e-3, 3e-3]
 
   dropout:      # uniform float search
     type: uniform
-    range: [0.1, 0.3]
+    range: [0.05, 0.2]
 
   block_size: # categorical choices
     type: categorical
-    values: [64, 128, 256]
+    values: [64, 128]
