--- a/mainrun/train_config.yaml
+++ b/mainrun/train_config.yaml
@@ -3,6 +3,7 @@ run_configs:
   train: true
   use_default: false
   train_tok: true
+  model_path: models/model_midsize.pth
 
 storage:
   url:  "hyperparameter.db"
